kubernetes/apps/default/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-and-local-ingress
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: default
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
  egress:
    - toEntities:
        - host
        - remote-node
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: security
      toPorts:
        - ports:
            - port: "3890"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8448"
              protocol: TCP
    - toCIDR:
        - 172.16.20.7/32 # Garage
      toPorts:
        - ports:
            - port: "3902"
              protocol: TCP
